--- a/index.html
+++ b/index.html
@@ -9,22 +9,15 @@
 <meta content="PointWorld: Scaling 3D World Models for In-The-Wild Robotic Manipulation" property="og:title"/>
 <meta content="PointWorld: Scaling 3D world models for in-the-wild robotic manipulation." property="og:description"/>
 <meta content="website" property="og:type"/>
-<meta content="media/preview-card-1080p.jpg" property="og:image"/>
-<meta content="1920" property="og:image:width"/>
-<meta content="1080" property="og:image:height"/>
-<meta content="image/jpeg" property="og:image:type"/>
-<meta content="PointWorld project preview card" property="og:image:alt"/>
-<meta content="media/preview-card-180p.jpg" property="og:image"/>
-<meta content="320" property="og:image:width"/>
-<meta content="180" property="og:image:height"/>
-<meta content="image/jpeg" property="og:image:type"/>
-<meta content="PointWorld project preview card" property="og:image:alt"/>
+<meta content="media/figures/teaser.png" property="og:image"/>
+<meta content="image/png" property="og:image:type"/>
+<meta content="PointWorld teaser" property="og:image:alt"/>
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="PointWorld: Scaling 3D World Models for In-The-Wild Robotic Manipulation" name="twitter:title"/>
 <meta content="PointWorld: Scaling 3D world models for in-the-wild robotic manipulation." name="twitter:description"/>
-<meta content="media/preview-card-1080p.jpg" name="twitter:image"/>
-<meta content="PointWorld project preview card" name="twitter:image:alt"/>
-<link href="media/preview-card-180p.jpg" rel="icon" type="image/jpeg"/>
+<meta content="media/figures/teaser.png" name="twitter:image"/>
+<meta content="PointWorld teaser" name="twitter:image:alt"/>
+<link href="media/figures/teaser.png" rel="icon" type="image/png"/>
 <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet"/>
 <link href="./static/css/bulma.min.css" rel="stylesheet"/>
 <link href="./static/css/bulma-carousel.min.css" rel="stylesheet"/>
@@ -65,9 +58,7 @@ Anonymous Affiliation
 <section class="section teaser-section">
 <div class="container is-max-widescreen">
 <figure class="image teaser-image">
-<video autoplay muted loop playsinline controls preload="metadata" poster="media/preview-card-180p.jpg" aria-label="PointWorld teaser">
-<source src="media/teaser-720p.mp4" type="video/mp4"/>
-</video>
+<img alt="PointWorld teaser" src="media/figures/teaser.png"/>
 </figure>
 <h2 class="subtitle has-text-centered teaser-caption" style="--teaser-caption-size: 1.0rem; --teaser-caption-line-height: 1.55;">
       PointWorld is a large pre-trained 3D world model that predicts full-scene 3D point flow from partially observable RGB-D captures and robot actions (represented as 3D point flow).
